--- a/invoice/index.html
+++ b/invoice/index.html
@@ -81,14 +81,7 @@
         </div>
 
         <hr />
-        <div class="row gy-4">
-          <!-- <div class="col-sm-6">
-            <strong>Thông tin phương tiện:</strong>
-            <div id="info-motorbike">
-              <br />
-              <br />
-            </div>
-          </div> -->
+        <!-- <div class="row gy-4">
           <div class="col-sm-6">
             <strong>Nhân viên giao vận:</strong>
             <div id="info-employee">
@@ -98,7 +91,7 @@
           </div>
         </div>
 
-        <hr />
+        <hr /> -->
         <!-- <strong>Ghi chú:</strong>
         <div id="info-note"></div>
 
